WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106470
Cursor stops blinking after clicking on scrollbar
https://bugs.webkit.org/show_bug.cgi?id=106470
Summary
Cursor stops blinking after clicking on scrollbar
Ojan Vafai
Reported
2013-01-09 10:25:41 PST
Created
attachment 181943
[details]
test case See attached test-case.
Attachments
test case
(286 bytes, text/html)
2013-01-09 10:25 PST
,
Ojan Vafai
no flags
Details
Patch
(1.48 KB, patch)
2013-01-16 16:36 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Patch
(2.28 KB, patch)
2013-01-16 16:47 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-09 10:26:13 PST
Happens in textareas as well.
Ojan Vafai
Comment 2
2013-01-09 10:45:41 PST
The problem is that we're now calling setCaretBlinkingSuspended(true) on mousedown without calling the corresponding setCaretBlinkingSuspended(false) on mouseup in EventHandler.cpp.
Radar WebKit Bug Importer
Comment 3
2013-01-09 10:48:49 PST
<
rdar://problem/12982203
>
Elliott Sprehn
Comment 4
2013-01-16 15:43:10 PST
I'm seeing this same behavior from shipping Safari, Chrome, and as far back in the nightlies as I can on 10.8 @
r122661
on 2012-07-14. I don't think this is a regression. Does anyone know when this worked before?
Elliott Sprehn
Comment 5
2013-01-16 15:57:46 PST
I downloaded Chrome 8 and this reproduces there too, so I think the answer to how long this has been broken is forever.
Elliott Sprehn
Comment 6
2013-01-16 16:36:23 PST
Created
attachment 183059
[details]
Patch
Elliott Sprehn
Comment 7
2013-01-16 16:47:48 PST
Created
attachment 183061
[details]
Patch
WebKit Review Bot
Comment 8
2013-01-16 17:22:45 PST
Comment on
attachment 183061
[details]
Patch Clearing flags on attachment: 183061 Committed
r139939
: <
http://trac.webkit.org/changeset/139939
>
WebKit Review Bot
Comment 9
2013-01-16 17:22:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug