Cursor stops blinking after clicking on scrollbar https://bugs.webkit.org/show_bug.cgi?id=106470

Reviewed by Ojan Vafai.

Restore the caret blinking when doing a mouseup on a
scrollbar so scrolling a textarea doesn't cause the
caret to freeze.

No new tests, there doesn't seem to be any way to test
cursor blinking.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleMouseReleaseEvent):
(WebCore::EventHandler::handleMouseDoubleClickEvent):


git-svn-id: svn://svn.chromium.org/blink/trunk@139939 bbb929c8-8fbe-4397-9dbb-9b2b20218538